--- a/SimpleServer/CMakeLists.txt
+++ b/SimpleServer/CMakeLists.txt
@@ -3,13 +3,16 @@ cmake_minimum_required(VERSION 3.2)
 project(hl_event_server C CXX)
 
 SET (EXAMPLE_BINARY "simple_server")
+SET (WRITER_BINARY  "event_writer")
 SET (TESTS "gtest")
 
 find_package(OpenSSL)
 find_package(GTest REQUIRED)
 find_package(Threads)
 find_package(ZLIB)
+find_package(CppKafka REQUIRED)
 find_package(Poco REQUIRED COMPONENTS Foundation Util Net XML JSON Crypto NetSSL)
+find_package(Boost COMPONENTS filesystem system program_options regex REQUIRED)
 
 
 if(NOT ${Poco_FOUND})
@@ -28,6 +31,11 @@ add_executable(${EXAMPLE_BINARY} main.cpp
                                  database/database.cpp
         database/person.cpp)
 
+add_executable(${WRITER_BINARY} writer_main.cpp
+        config/config.cpp
+        database/database.cpp
+        database/person.cpp)
+
 add_executable(${TESTS} test/unittest.cpp config/config.cpp database/database.cpp
         database/person.cpp)
 
@@ -35,18 +43,38 @@ add_executable(${TESTS} test/unittest.cpp config/config.cpp database/database.cp
 target_include_directories(${EXAMPLE_BINARY} PRIVATE "${CMAKE_BINARY_DIR}")
 target_compile_options(${EXAMPLE_BINARY} PRIVATE -Wall -Wextra -pedantic -Werror )
 
+target_include_directories(${WRITER_BINARY} PRIVATE "${CMAKE_BINARY_DIR}")
+target_compile_options(${WRITER_BINARY} PRIVATE -Wall -Wextra -pedantic -Werror )
 
-target_link_libraries(${EXAMPLE_BINARY} PRIVATE 
-                             ${CMAKE_THREAD_LIBS_INIT} 
-                             ${Poco_LIBRARIES}
-                             "PocoData"
-                             "PocoDataMySQL"
-                             "mysqlclient")
+
+target_link_libraries(${EXAMPLE_BINARY} PRIVATE
+        ${CMAKE_THREAD_LIBS_INIT}
+        ${Poco_LIBRARIES}
+        "libPocoData.so"
+        "libPocoDataMySQL.so"
+        "libmysqlclient.so"
+        "rdkafka++"
+        CppKafka::cppkafka
+        ZLIB::ZLIB
+        ${Boost_LIBRARIES})
+
+target_link_libraries(${WRITER_BINARY} PRIVATE
+        ${CMAKE_THREAD_LIBS_INIT}
+        ${Poco_LIBRARIES}
+        "libPocoData.so"
+        "libPocoDataMySQL.so"
+        "libmysqlclient.so"
+        "rdkafka++"
+        CppKafka::cppkafka
+        ZLIB::ZLIB
+        ${Boost_LIBRARIES})
+
 
 target_link_libraries(${TESTS} ${CMAKE_THREAD_LIBS_INIT}
         ${Poco_LIBRARIES}
         "PocoData"
         "PocoDataMySQL"
+        "CppKafka::cppkafka"
         "mysqlclient" ${GTEST_LIBRARIES})
 
 
@@ -54,6 +82,11 @@ set_target_properties(${EXAMPLE_BINARY} PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(${EXAMPLE_BINARY} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
 
 install(TARGETS ${EXAMPLE_BINARY} RUNTIME DESTINATION bin)
+
+set_target_properties(${WRITER_BINARY} PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(${WRITER_BINARY} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
+
+install(TARGETS ${WRITER_BINARY} RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
